--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -23,16 +23,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="@dimen/dp2"
             android:text="跳过"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_size_14"/>
-
-        <TextView
-            android:id="@+id/tv_count_down"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp10"
-            android:textColor="@color/pink"
             android:textSize="@dimen/text_size_14"/>
     </LinearLayout>
 
