--- a/app/src/main/res/layout/layout_main_toolbar.xml
+++ b/app/src/main/res/layout/layout_main_toolbar.xml
@@ -13,81 +13,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+            <com.flyco.tablayout.SlidingTabLayout
+                android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="@dimen/dp48"
                 android:background="@color/colorPrimary"
-                app:contentInsetStart="@dimen/dp0"
-                app:layout_scrollFlags="scroll|enterAlways|snap"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/toolbar_skyCon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="@dimen/dp16"
-                        android:src="@drawable/forecast_card_icon_warning_cold"/>
-
-                    <TextView
-                        android:id="@+id/toolbar_temperature"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_toEndOf="@+id/toolbar_skyCon"
-                        android:text="26°"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/text_size_20"/>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="@dimen/dp6"
-                        android:layout_toEndOf="@+id/toolbar_temperature"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/toolbar_position"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="当前位置"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/text_size_10"/>
-
-                        <TextView
-                            android:id="@+id/toolbar_proposal"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="出行建议"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/text_size_10"/>
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/toolbar_StepCount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:background="@drawable/semi_ellipse"
-                        android:text="当前步数：1000"
-                        android:textColor="@color/white"/>
-
-                </RelativeLayout>
-
-            </android.support.v7.widget.Toolbar>
-
+                android:paddingEnd="@dimen/dp10"
+                android:paddingStart="@dimen/dp10"
+                app:tl_divider_width="@dimen/dp40"
+                app:tl_indicator_corner_radius="@dimen/dp1"
+                app:tl_indicator_height="@dimen/dp2"
+                app:tl_tab_space_equal="true"/>
 
         </android.support.design.widget.AppBarLayout>
 
+        <com.ym.quickrun.widget.NoScrollViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
     </android.support.design.widget.CoordinatorLayout>
 
 </FrameLayout>
