--- a/app/src/main/res/layout/layout_main_toolbar.xml
+++ b/app/src/main/res/layout/layout_main_toolbar.xml
@@ -1,38 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
-    <android.support.design.widget.CoordinatorLayout
+    <FrameLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="?android:attr/windowBackground"/>
+</LinearLayout>
 
-            <com.flyco.tablayout.SlidingTabLayout
-                android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp48"
-                android:background="@color/colorPrimary"
-                android:paddingEnd="@dimen/dp10"
-                android:paddingStart="@dimen/dp10"
-                app:tl_divider_width="@dimen/dp40"
-                app:tl_indicator_corner_radius="@dimen/dp1"
-                app:tl_indicator_height="@dimen/dp2"
-                app:tl_tab_space_equal="true"/>
 
-        </android.support.design.widget.AppBarLayout>
 
-        <com.ym.quickrun.widget.NoScrollViewPager
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="never"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-    </android.support.design.widget.CoordinatorLayout>
 
-</FrameLayout>
+
