--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -28,4 +28,24 @@
     </declare-styleable>
 
 
+    <declare-styleable name="StepCircleView">
+        <!-- 圆的半径 -->
+        <attr name="min_circle_radio" format="integer"/>
+        <!-- 圆环的宽度 -->
+        <attr name="ring_width" format="float"/>
+        <!-- 分成几段 -->
+        <attr name="select" format="integer"/>
+        <!-- 每段间隔的角度 -->
+        <attr name="selec_angle" format="integer"/>
+        <!-- 圆的颜色 -->
+        <attr name="circle_color" format="color"/>
+        <!-- 圆的颜色 -->
+        <attr name="max_circle_color" format="color"/>
+        <!-- 圆环的默认颜色 -->
+        <attr name="ring_normal_color" format="color"/>
+        <!-- 圆环要显示的彩色的区域-->
+        <attr name="ring_color_select" format="integer"/>
+        <!-- 是否显示断 -->
+        <attr name="is_show_select" format="boolean"/>
+    </declare-styleable>
 </resources>
