--- a/app/src/main/res/layout/layout_main_toolbar.xml
+++ b/app/src/main/res/layout/layout_main_toolbar.xml
@@ -20,7 +20,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/fl_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
