--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -32,15 +32,13 @@
         <!-- 圆的半径 -->
         <attr name="min_circle_radio" format="integer"/>
         <!-- 圆环的宽度 -->
-        <attr name="ring_width" format="float"/>
+        <attr name="ring_width" format="integer"/>
         <!-- 分成几段 -->
         <attr name="select" format="integer"/>
         <!-- 每段间隔的角度 -->
         <attr name="selec_angle" format="integer"/>
         <!-- 圆的颜色 -->
         <attr name="circle_color" format="color"/>
-        <!-- 圆的颜色 -->
-        <attr name="max_circle_color" format="color"/>
         <!-- 圆环的默认颜色 -->
         <attr name="ring_normal_color" format="color"/>
         <!-- 圆环要显示的彩色的区域-->
