--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -63,6 +63,6 @@
     <color name="pink_dark">#b85671</color>
     <color name="pink_trans">#99f0486c</color>
 
-    <color name="gray1">#C5C7C7</color>
+    <color name="gray1">#EFF3F6</color>
     <color name="gray2">#EAECF0</color>
 </resources>
