--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/layout_toolbar"/>
+
+    <com.ym.quickrun.view.CircleImageView
+        android:id="@+id/image"
+        android:layout_width="@dimen/dp240"
+        android:layout_height="@dimen/dp240"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/dp20"
+        app:border_color="@color/green_1"
+        app:border_width="@dimen/dp1"/>
+
+
+</LinearLayout>
