--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,27 +27,8 @@
     <color name="font_normal">#555555</color>
     <color name="font_gray">#656565</color>
     <color name="line_bg">#e6e6e6</color>
-    <color name="navigation_background_light">#FFF8F8F8</color>
-    <color name="navigation_subtitle_primary_text">#FFFFFFFF</color>
-    <color name="navigation_subtitle_secondary_text">#BFFFFFFF</color>
-    <color name="item_tag_stroke_background">@color/white_30</color>
-    <color name="card_view_background">@color/white</color>
-    <color name="pink_text_color">#fb7299</color>
-    <color name="item_tag_background">@color/white</color>
-    <color name="refresh_pink_background">#fb7299</color>
-    <color name="bili_logo_pink_color">#fb7299</color>
-    <color name="focus_text_color">#fb7299</color>
-    <color name="focus_bg_color">@android:color/transparent</color>
     <color name="window_background">#eaeaea</color>
-    <color name="bangumi_badge_gary">#e58B8B8C</color>
-    <color name="nav_head_image_background">#F8668D</color>
-    <color name="nav_head_round_background">#FDC7D6</color>
-    <color name="nav_head_roung_text_background">#FB7BA0</color>
-    <color name="bangumi_index_green_bg">#75C568</color>
-    <color name="bangumi_index_yellow_bg">#FFC03A</color>
-    <color name="vip_button_bg_color">#FEB1B3</color>
-    <color name="vip_button_text_color">#FE6F70</color>
-    <color name="search_background_color">#E9EAEA</color>
+
 
     <color name="theme_color_primary">#fb7299</color>
     <color name="theme_color_primary_dark">#b85671</color>
@@ -63,4 +44,5 @@
     <color name="pink_dark">#b85671</color>
     <color name="pink_trans">#99f0486c</color>
 
+    <color name="green_1">#8EE484</color>
 </resources>
