--- a/app/src/main/res/layout/layout_loading.xml
+++ b/app/src/main/res/layout/layout_loading.xml
@@ -6,7 +6,7 @@
     android:layout_centerInParent="true"
     android:orientation="vertical">
 
-    <com.ym.quickrun.widget.ProgressWheel
+    <com.ym.lightRunning.widget.ProgressWheel
         android:id="@+id/pw_loading"
         android:layout_width="@dimen/dp50"
         android:layout_height="@dimen/dp50"/>
