--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -27,4 +27,4 @@
                 android:textSize="@dimen/text_size_18"/>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
-</merge>
+</LinearLayout>
