--- a/app/src/main/res/layout/nav_header_layout.xml
+++ b/app/src/main/res/layout/nav_header_layout.xml
@@ -10,7 +10,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
 
-    <com.ym.lightRunning.view.CircleImageView
+    <com.ym.deambulation.view.CircleImageView
         android:id="@+id/ic_user_icon"
         android:layout_width="@dimen/dp74"
         android:layout_height="@dimen/dp74"
