--- a/app/src/main/res/layout/layout_main_toolbar.xml
+++ b/app/src/main/res/layout/layout_main_toolbar.xml
@@ -10,15 +10,14 @@
         android:id="@+id/fl_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/gray_light"/>
+        android:layout_weight="1"/>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:itemBackground="@null"
+        app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@color/bottom_nav_item_color"
         app:itemTextColor="@color/bottom_nav_item_color"
         app:menu="@menu/bottom_nav"/>
