--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -15,24 +15,11 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/ToolbarPopupTheme">
+            android:fitsSystemWindows="true"
+            app:popupTheme="@style/ToolbarPopupTheme"
+            app:title="@string/main_toolbar_title_top"
+            app:titleTextColor="@color/textColor">
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
-                android:layout_height="wrap_content"
-                android:gravity="center">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/bottom_run"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/text_size_18"/>
-
-
-            </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
