--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -5,10 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="false"
+    android:background="@drawable/ic_no_data"
     android:orientation="vertical">
-
-
-    <include layout="@layout/layout_toolbar"/>
 
     <com.ym.deambulation.view.CircleImageView
         android:id="@+id/image"
