--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -1,27 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:fitsSystemWindows="true"
-        app:elevation="@dimen/dp0">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            app:popupTheme="@style/ToolbarPopupTheme"
-            app:title="@string/main_toolbar_title_top"
-            app:titleTextColor="@color/textColor">
-
-
-        </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>
-</LinearLayout>
+        app:title="@string/main_toolbar_title_top">
+    </android.support.v7.widget.Toolbar>
+</merge>
