--- a/app/src/main/res/layout/layout_main_content.xml
+++ b/app/src/main/res/layout/layout_main_content.xml
@@ -4,13 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="false"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        style="@style/AppTheme.Toolbar"
-        android:fitsSystemWindows="true"/>
+
+    <include layout="@layout/layout_toolbar"/>
 
     <FrameLayout
         android:id="@+id/fl_content"
