--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -8,14 +8,14 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
         android:background="@drawable/shape_gradient"
+        android:theme="@style/AppTheme.AppBarOverlay"
         app:elevation="@dimen/dp0">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:fitsSystemWindows="true"
             app:popupTheme="@style/ToolbarPopupTheme"
             app:title="@string/main_toolbar_title_top"
