--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -16,9 +16,30 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/ToolbarPopupTheme"
-            app:title="@string/main_toolbar_title_top"
-            app:titleTextColor="@color/colorPrimary">
+            app:popupTheme="@style/ToolbarPopupTheme">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/main_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="@string/main_toolbar_title_top"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="@dimen/text_size_16"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:paddingEnd="@dimen/dp10"
+                    android:src="@drawable/ic_share"/>
+
+
+            </RelativeLayout>
 
 
         </android.support.v7.widget.Toolbar>
