--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -26,10 +27,9 @@
                     android:id="@+id/main_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="@string/main_toolbar_title_top"
+                    android:layout_centerVertical="true"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/text_size_16"/>
+                    android:textSize="@dimen/text_size_20"/>
 
                 <ImageView
                     android:layout_width="wrap_content"
